--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: ecom_flutter
 description: A new Flutter project.
-
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -28,6 +27,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  carousel_pro: ^1.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +44,15 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+
+  - images/
+  - images/cats/
+  - images/products/
+
+  
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
